--- a/views/partials/burgers/burger-block.handlebars
+++ b/views/partials/burgers/burger-block.handlebars
@@ -1,7 +1,4 @@
 <li>
 	{{burger_name}}
-
-	<button class="change-devoured" data-id="{{id}}" data-newdevoured="{{devoured}}">
-		{{#if devoured}}DEVOURED!{{else}}NOT DEVOURED YET!{{/if}}
-	</button>
+	<button class="change-devoured" data-id="{{id}}" data-newdevoured="{{devoured}}">Devour it!</button>
 </li>
